--- a/assects/style.css
+++ b/assects/style.css
@@ -118,6 +118,7 @@ color: white;
     background-size: cover;
     background-position: center;
     margin-top: -137px;
+    padding-bottom: 1.5rem;
 }
 @media (max-width:678px){
     .middle{
@@ -137,7 +138,7 @@ color: white;
 .middle-condainer{
     display: flex;
     flex-wrap: wrap;
-    margin-left: 5%;
+    justify-content: space-around;
 }    
 .button{
     text-align: center;
